--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul aria-label="breadcrumb" role="navigation" id="breadcrumb" >
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -31,11 +31,7 @@
 
   <!-- Beginning main -->
   <main id="maincontent">
-    <!-- Beginning map -->
-    <section aria-disabled="true" id="map-container">
-      <div id="map"></div>
-    </section>
-    <!-- End map -->
+  
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <h1 id="restaurant-name"></h1>
@@ -55,7 +51,11 @@
     <!-- End reviews -->
   </main>
   <!-- End main -->
-
+  <!-- Beginning map -->
+  <section id="map-container" tabindex="-1"  aria-disabled="true">
+    <div role="application" id="map"></div>
+  </section>
+  <!-- End map -->
   <!-- Beginning footer -->
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
